trunk/Archive/0922729b7e20f9cbe64720e32e54fde1-e434afe6909ff0e74aaeafde0a4175f3/output
+ g++-4.8 -std=c++0x -O2 -Wall -pedantic -pthread main.cpp
main.cpp:2:21: error: invalid use of 'this' at top level
     void (decltype(*this)::*calback)(int, int);
                     ^
main.cpp:2:11: error: decltype evaluates to '<type error>', which is not a class or enumeration type
     void (decltype(*this)::*calback)(int, int);
           ^
